# tupac

./: .gitignore  AGENTS.md  LICENSE  README.md  check-all.sh  pyproject.toml
configs/: simple.json  web-search.json
src/tupac/: cli.py  conversation.py  resource_cache.py  tool_processing.py
tests/: test_cli.py  test_resource_cache.py
